Add LinkedIn preview meta tags

--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Developer Portfolio</title>
+    <!-- SEO -->
+<meta name="description" content="Frontend Developer portfolio built with React, Vite and Tailwind CSS. Explore my projects, skills and experience." />
+
+<!-- Open Graph (LinkedIn / WhatsApp / Facebook) -->
+<meta property="og:title" content="Hi, I am C.Santhosh kumar" />
+<meta property="og:description" content="Frontend developer portfolio showcasing projects built with React, Tailwind CSS and modern UI & responsive design." />
+<meta property="og:image" content="https://santhosh-portfolio-alpha.vercel.app/preview.png" />
+<meta property="og:url" content="https://santhosh-portfolio-alpha.vercel.app/" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter (optional but good) -->
+<meta name="twitter:card" content="summary_large_image" />
+
   </head>
   <body>
     <div id="root"></div>
